# Regex-Debugger

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  setup.ps1  setup.sh  vcpkg.json  vsSetup.ps1
.cache/clangd/index/: block.h.75B6F985D8751B7B.idx  main.cpp.BEE0B4610E2D5CFE.idx  robot.cpp.28CD4B3513129AD2.idx  robot.h.54D891F2AD202667.idx
appdata/local/nvim/undo/: C%%Users%alexa%Documents%GitHub%Regex-Debugger%include%GUI_handler.h
include/: GUI_handler.h  gui.h  robot.h
include/appdata/local/nvim/undo/: C%%Users%alexa%Documents%GitHub%Regex-Debugger%include%GUI_handler.h
src/: gui.cpp  main.cpp  robot.cpp  xeger.cpp
src/appdata/local/nvim/undo/: C%%Users%alexa%Documents%GitHub%Regex-Debugger%src%main.cpp
